objects/Demo_Log__c.object
<CustomObject>
    <label>Demo Log</label>
    <nameField>
        <displayFormat>INF-RML-{000000000}</displayFormat>
        <label>Demo Request No#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>OS__c</fullName>
        <label>Operating system required instead of OS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MS 2008 R2 64bit</fullName>
                </value>
                <value>
                    <fullName>MS 2012 R2 64bit</fullName>
                </value>
                <value>
                    <fullName>Linux</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Instrument Demonstration</fullName>
                    <default>true</default>
                    <label>Instrument Demonstration</label>
                </value>
                <value>
                    <fullName>Training-PKI</fullName>
                </value>
                <value>
                    <fullName>Training-Customer</fullName>
                </value>
                <value>
                    <fullName>Reagent Evaluation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type2__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Parked</fullName>
                </value>
                <value>
                    <fullName>Internal Use</fullName>
                </value>
                <value>
                    <fullName>Template</fullName>
                </value>
                <value>
                    <fullName>Cloud Parked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Other Products of Interest</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retired?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <label>Urgency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>the industry field from the Demonstration Information Form</description>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academic/Research</fullName>
                </value>
                <value>
                    <fullName>Agricultural</fullName>
                </value>
                <value>
                    <fullName>Biotech</fullName>
                </value>
                <value>
                    <fullName>Chemical</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Contract Research Labs.</fullName>
                </value>
                <value>
                    <fullName>CRO</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Fragrance</fullName>
                </value>
                <value>
                    <fullName>Forensics</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Health Services</fullName>
                </value>
                <value>
                    <fullName>Incubator</fullName>
                </value>
                <value>
                    <fullName>Lubricating/Used Oils</fullName>
                </value>
                <value>
                    <fullName>Medical Device</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Pharmceutical</fullName>
                </value>
                <value>
                    <fullName>Scientific Equipment</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Speciality Chemicals</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
                <value>
                    <fullName>Water/Wastewater</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>DMZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <label>Template</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ENotebook 2014 R6 + COE 12.6.2 OOTB [C1262E2014R6Tem]</fullName>
                </value>
                <value>
                    <fullName>ENotebook 2014 R5.1 + COE 12.6.2 (190) [EUC1261E2014Tem]</fullName>
                </value>
                <value>
                    <fullName>European CBOE 12.5.1 + EN 12.1.X System (165) [EUCOE125D1]</fullName>
                </value>
                <value>
                    <fullName>CBOE 12.5.1 + ELN 12.1.X OOTB [CRCOE1251Tem]</fullName>
                </value>
                <value>
                    <fullName>Win 2012 + Ora 11g R2 clean [W2012ORA11Tem]</fullName>
                </value>
                <value>
                    <fullName>Win 2008 + Ora 11g R2 clean [W2K8R2ORA]</fullName>
                </value>
                <value>
                    <fullName>Win 2012 clean [W2012Tem]</fullName>
                </value>
                <value>
                    <fullName>Win 2008 clean [WIN2K8R2Tem]</fullName>
                </value>
                <value>
                    <fullName>Win 2008 + MSSQL 2008 clean [W2K8R2MSSQL]</fullName>
                </value>
                <value>
                    <fullName>Win 2008 + Ms SharePoint Foundation [AMESHRPNTD120]</fullName>
                </value>
                <value>
                    <fullName>Spotfire Server [Advise version and add-ons required]</fullName>
                </value>
                <value>
                    <fullName>New system [Please specify at the comment your needs]</fullName>
                </value>
                <value>
                    <fullName>AWS New System [Please specify at the comment your needs]</fullName>
                </value>
                <value>
                    <fullName>System Configuration [Please specify at the comment your needs]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demo_Date__c</fullName>
        <label>Demo Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Site__c</fullName>
        <label>Demo Site</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Site</fullName>
                    <default>true</default>
                    <label>Customer Site</label>
                </value>
                <value>
                    <fullName>Waltham Technical Center</fullName>
                </value>
                <value>
                    <fullName>Atlanta Technical Center</fullName>
                </value>
                <value>
                    <fullName>San Jose Technical Center</fullName>
                </value>
                <value>
                    <fullName>Oakbrook Technical Center</fullName>
                </value>
                <value>
                    <fullName>Shelton Technical Center</fullName>
                </value>
                <value>
                    <fullName>Jorgenson Machinery/ PKI Houston</fullName>
                </value>
                <value>
                    <fullName>Woodbridge Technical Center</fullName>
                </value>
                <value>
                    <fullName>Japan Demo Lab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demo_Team__c</fullName>
        <description>All the demo team</description>
        <label>Team Members</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Level_INF__c</fullName>
        <inlineHelpText>Estimated effort. Level 1 (&lt;1 day), 2 (1-2 days) 3 (&gt;2 days)</inlineHelpText>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title_INF__c</fullName>
        <label>Title</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_INF__c</fullName>
        <formula>Opportunity__r.Account.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_INF__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age_in_Days__c</fullName>
        <formula>IF( ISPICKVAL(Status_INF__c, &quot;Completed&quot;), Completion_Date_INF__c - Scheduled_Date_INF__c , 
IF( ISPICKVAL(Status_INF__c, &quot;Cancelled&quot;), 0, 
DATETIMEVALUE(TODAY ())- CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Luis Diaz</fullName>
                </value>
                <value>
                    <fullName>Franklin Jimenez</fullName>
                </value>
                <value>
                    <fullName>Edgardo Gutierrez</fullName>
                </value>
                <value>
                    <fullName>John Baker</fullName>
                </value>
                <value>
                    <fullName>Stepan Churukanov</fullName>
                </value>
                <value>
                    <fullName>Demo Center</fullName>
                    <default>true</default>
                    <label>Demo Center</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N30000001GFdsEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Demo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Demo</label>
        <referenceTo>Demo_Log__c</referenceTo>
        <relationshipLabel>System Request</relationshipLabel>
        <relationshipName>System_Demo_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_s_IP__c</fullName>
        <label>System&apos;s IP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_INF__c</fullName>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Workshop/Pilot</fullName>
                </value>
                <value>
                    <fullName>Customer Outreach</fullName>
                </value>
                <value>
                    <fullName>Conference/Webinar/Seminar</fullName>
                </value>
                <value>
                    <fullName>Presentation/Discussion</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>RFP/RFI/RFQ</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Followup</fullName>
                </value>
                <value>
                    <fullName>Customer Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_OppId__c</fullName>
        <formula>Opportunity__r.Id</formula>
        <label>System OppId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Demo_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Demo_Lead_INF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Demo_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Demo_Location__c</fullName>
        <label>Demo Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Location(On-Site)</fullName>
                </value>
                <value>
                    <fullName>Remote(Web)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_img_inf__c</fullName>
        <formula>IMAGE(
CASE(Level_INF__c,
&quot;3&quot;,&quot;/img/samples/light_red.gif&quot;,
&quot;2&quot;,&quot;img/samples/light_yellow.gif&quot;,
&quot;1&quot;,&quot;img/samples/light_green.gif&quot;,&quot;&quot;),
&quot;Level&quot;)</formula>
        <label>Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NextSteps_INF__c</fullName>
        <description>Next Steps for Demo Log</description>
        <label>Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>System_s_Name__c</fullName>
        <label>System&apos;s Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Status__c</fullName>
        <label>Default Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ON</fullName>
                </value>
                <value>
                    <fullName>OFF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demo_Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Demo Inventory</label>
        <referenceTo>Field_Inventory__c</referenceTo>
        <relationshipName>R00N30000001FWDfEAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Demo_Notes_INF__c</fullName>
        <label>Demo Report</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <label>Opportunity ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Purpose__c</fullName>
        <label>System Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Pilot</fullName>
                </value>
                <value>
                    <fullName>POC</fullName>
                </value>
                <value>
                    <fullName>Internal Use</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demo_Log_Status__c</fullName>
        <label>Demo Log Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                    <default>true</default>
                    <label>Pending Approval</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Date_INF__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Amount_Value__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Amount Value ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Decision_Criteria__c</fullName>
        <label>Customer Pain Points</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Demo_Center_Email__c</fullName>
        <defaultValue>&quot;Informatics.DemoCenter@PERKINELMER.COM&quot;</defaultValue>
        <label>Demo Center Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Objective__c</fullName>
        <label>Business Objective</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date_INF__c</fullName>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>System_Days_Active__c</fullName>
        <label>System Days Active</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30 days</fullName>
                </value>
                <value>
                    <fullName>60 days</fullName>
                </value>
                <value>
                    <fullName>90 days</fullName>
                </value>
                <value>
                    <fullName>120 days</fullName>
                </value>
                <value>
                    <fullName>150 days</fullName>
                </value>
                <value>
                    <fullName>180 days</fullName>
                </value>
                <value>
                    <fullName>Retire</fullName>
                </value>
                <value>
                    <fullName>15 days</fullName>
                    <isActive>false</isActive>
                    <label>15 days</label>
                </value>
                <value>
                    <fullName>360 days</fullName>
                    <isActive>false</isActive>
                    <label>360 days</label>
                </value>
                <value>
                    <fullName>7 days</fullName>
                    <isActive>false</isActive>
                    <label>7 days</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completion_Date_INF__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_for_Demo_Pilot__c</fullName>
        <formula>Parent_Demo__r.Scheduled_Date_INF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date for Demo/Pilot</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Lead_Email_INF__c</fullName>
        <label>Demo Lead Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_Product_INF__c</fullName>
        <label>Primary Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Attivio</fullName>
                </value>
                <value>
                    <fullName>CAFÉ  - Medical Review</fullName>
                </value>
                <value>
                    <fullName>CAFÉ - RBM</fullName>
                </value>
                <value>
                    <fullName>CAFÉ - RWE</fullName>
                </value>
                <value>
                    <fullName>ChemDraw</fullName>
                </value>
                <value>
                    <fullName>Columbus</fullName>
                </value>
                <value>
                    <fullName>Elements</fullName>
                </value>
                <value>
                    <fullName>E-Notebook Biology</fullName>
                </value>
                <value>
                    <fullName>E-Notebook Chemistry</fullName>
                </value>
                <value>
                    <fullName>E-Notebook Formulations</fullName>
                </value>
                <value>
                    <fullName>iLab</fullName>
                </value>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>Inventory Ent</fullName>
                </value>
                <value>
                    <fullName>LimsLink</fullName>
                </value>
                <value>
                    <fullName>Registration</fullName>
                </value>
                <value>
                    <fullName>Signals Clinical</fullName>
                </value>
                <value>
                    <fullName>Signals Lead Discovery</fullName>
                </value>
                <value>
                    <fullName>Signals Medical Review</fullName>
                </value>
                <value>
                    <fullName>Signals Notebook</fullName>
                </value>
                <value>
                    <fullName>Signals Notebook - Biology</fullName>
                </value>
                <value>
                    <fullName>Signals Notebook - Chemistry</fullName>
                </value>
                <value>
                    <fullName>Signals Notebook for ChemDraw</fullName>
                </value>
                <value>
                    <fullName>Signals Screening</fullName>
                </value>
                <value>
                    <fullName>Signals Translational</fullName>
                </value>
                <value>
                    <fullName>Spotfire Biology</fullName>
                </value>
                <value>
                    <fullName>Spotfire Chemistry</fullName>
                </value>
                <value>
                    <fullName>Spotfire Clinical</fullName>
                </value>
                <value>
                    <fullName>Spotfire for Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Spotfire High Content Profiler</fullName>
                </value>
                <value>
                    <fullName>Spotfire OmicsOffice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family_Demo__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01-NEO</fullName>
                </value>
                <value>
                    <fullName>02-PRE</fullName>
                </value>
                <value>
                    <fullName>03-DIA</fullName>
                </value>
                <value>
                    <fullName>04-AA</fullName>
                </value>
                <value>
                    <fullName>05-ICP</fullName>
                </value>
                <value>
                    <fullName>06-MAS</fullName>
                </value>
                <value>
                    <fullName>07-TEA</fullName>
                </value>
                <value>
                    <fullName>08-GC</fullName>
                </value>
                <value>
                    <fullName>09-LC</fullName>
                </value>
                <value>
                    <fullName>10-IR</fullName>
                </value>
                <value>
                    <fullName>11-UVS</fullName>
                </value>
                <value>
                    <fullName>12-ESS</fullName>
                </value>
                <value>
                    <fullName>13-AWS</fullName>
                </value>
                <value>
                    <fullName>14-SPS</fullName>
                </value>
                <value>
                    <fullName>15-APS</fullName>
                </value>
                <value>
                    <fullName>16-RRD</fullName>
                </value>
                <value>
                    <fullName>17-MLD</fullName>
                </value>
                <value>
                    <fullName>18-CSA</fullName>
                </value>
                <value>
                    <fullName>19-LVI</fullName>
                </value>
                <value>
                    <fullName>20-ANP</fullName>
                </value>
                <value>
                    <fullName>21-PGI</fullName>
                </value>
                <value>
                    <fullName>22-HTS</fullName>
                </value>
                <value>
                    <fullName>23-RRS</fullName>
                </value>
                <value>
                    <fullName>24-MOL</fullName>
                </value>
                <value>
                    <fullName>25-DIS</fullName>
                </value>
                <value>
                    <fullName>26 - OneSource</fullName>
                </value>
                <value>
                    <fullName>27 - MDX</fullName>
                </value>
                <value>
                    <fullName>28 - NTD</fullName>
                </value>
                <value>
                    <fullName>29 - PBR</fullName>
                </value>
                <value>
                    <fullName>30-RAM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Details_INF__c</fullName>
        <label>Request Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>System_Created_Date__c</fullName>
        <label>System Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Center_Comments__c</fullName>
        <label>Demo Center Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Long_term_Objectives__c</fullName>
        <label>Long term Objectives</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Demo_Dates__c</fullName>
        <label>Potential Demo Dates</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Configuration__c</fullName>
        <label>System Configuration</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Workflow_Description__c</fullName>
        <label>Workflow Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demo_attendee_Description__c</fullName>
        <inlineHelpText>Departments</inlineHelpText>
        <label>Attendee Job Titles(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discovery_Agreement_Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Agreement Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PKI_products_currently_own__c</fullName>
        <description>This is to ensure that the name and version are entered</description>
        <inlineHelpText>Enter Name and Version</inlineHelpText>
        <label>PKI products currently own</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>System_Owner_email_if_inactive__c</fullName>
        <label>System Owner email (if inactive)</label>
        <type>Email</type>
    </fields>
    <recordTypes>
        <fullName>Informatics</fullName>
        <active>true</active>
        <label>Informatics</label>
    </recordTypes>
    <recordTypes>
        <fullName>System_Request</fullName>
        <active>true</active>
        <label>System Request</label>
    </recordTypes>
    <validationRules>
        <fullName>GBL_GBL_Demolog_demoreport_mandatory</fullName>
        <active>true</active>
        <description>Ensuring that demo report is filled for completed status</description>
        <errorConditionFormula>AND(ISPICKVAL( Status_INF__c ,&quot;Completed&quot;),OR(ISBLANK( Demo_Notes_INF__c ),ISPICKVAL( Demo_Location__c,&quot;&quot; ),ISPICKVAL( Level_INF__c,&quot;&quot; )))</errorConditionFormula>
        <errorDisplayField>Activity_INF__c</errorDisplayField>
        <errorMessage>Kindly enter Demo Report, Level and Demo Location for Completed Demo Log</errorMessage>
    </validationRules>
</CustomObject>